--- a/app/globals.css
+++ b/app/globals.css
@@ -571,7 +571,7 @@ width: 100%;
   flex-direction: column-reverse;
   align-items: center;
   text-align: center;
-  padding: 0 20px;
+  padding: 0 0;
 }
 .deadline-text {
   max-width: 100%;
